--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,6 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.title {
+  font-family: "Catamaran", sans-serif;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+button {
+  font-family: "Roboto", sans-serif;
+}
 
 .custom-scroll::-webkit-scrollbar {
   width: 8px; /* Narrow scrollbar */
